mstdn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: mstdn
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mstdn
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: mstdn
  namespace: mstdn
spec:
  selector:
    app: mstdn
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mstdn-streaming
  namespace: mstdn
spec:
  selector:
    app: mstdn-streaming
  ports:
    - name: streaming
      port: 4000
      targetPort: 4000
